# hmventures

./: .gitignore  README.md
projects/startup-grind-interviews/: .gitignore  current.md  pyproject.toml
projects/startup-grind-interviews/data/: opportunity_review.md  opportunity_review_intro.md
projects/startup-grind-interviews/data/bronze/: interviewees.jsonl  videos.jsonl
projects/startup-grind-interviews/data/bronze/transcripts/: 0qfQh_JnfLI.json  2hQqBB37pwc.json  4pd9BzxzFaU.json  5zmCJ3wNGvg.json  (+48 more)
projects/startup-grind-interviews/data/gold/: 0qfQh_JnfLI.json  985L7-Un8n8.json  FEzhDjxzEIs.json  Hs8OFY1DP4Y.json  Jl4wVX2G6t8.json  KtauDMsH-mA.json  RZpxreTDC30.json  Z3GZ8UeSyug.json  bhmtuyF-faQ.json  eWYL_szT_aQ.json  j4Zk8yTdI2E.json  mYmpWRGVlc4.json  qenvDqBIA10.json  rELQXuZ5OKQ.json  s1aH5xqyoXg.json  vbZ5b7KQcSM.json  ymhropvCctw.json
projects/startup-grind-interviews/data/silver/: interviews.jsonl  video_interviewee_matches.jsonl
projects/startup-grind-interviews/reference/: decisions.md  gold-extraction-prompt-drafts.md  gold-extraction-prompt-short-v1.md  gold-extraction-prompt-v2-candidate.md  gold-extraction-prompt.md  nugget-tagging-prompt-v1.md  opportunity-topic-taxonomy-v1.md  session-log.md
projects/startup-grind-interviews/scripts/: build_silver_interviews.py  chunked_extraction.py  compare_to_baseline.py  download_audio.py  enrich_videos.py  extract_entities.py  fetch_transcripts.py  generate_opportunity_review.py  match_videos_to_interviewees.py  scrape_page.py  tag_nuggets.py  tag_opportunity_topics.py  transcribe_local.py
(+169 files in other folders)
