[project]
name = "startup-grind-interviews"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "en-core-web-sm",
    "requests>=2.34.2",
    "spacy>=3.8.14",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
